# nonebot-plugin-batch-withdrawal

./: .pdm-python  LICENSE  README.md  pyproject.toml
nonebot_plugin_batch_withdrawal/: __init__.py
nonebot_plugin_batch_withdrawal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
